--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sitetest",
+  "name": "personalsite",
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "~2.0.0",
     "@angular/platform-browser-dynamic": "~2.0.0",
     "@angular/router": "~3.0.0",
+    "angular2-busy": "^1.0.2",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "ng2-page-transition": "^0.1.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
